client/styles/main.scss
body {
  background: url('/assets/img/menu/background-dashboard.png') no-repeat;
  color: #cee3f5;
  background-size: cover;

  .mirrored-X-image {
    -moz-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    transform: scaleX(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
  }

  .mirrored-Y-image {
    -moz-transform: scaleY(-1);
    -o-transform: scaleY(-1);
    -webkit-transform: scaleY(-1);
    transform: scaleY(-1);
    filter: FlipH;
    -ms-filter: "FlipH";
  }

  .menu-button {
    margin-bottom: 31px;
    display: inline-block;
  }

  
  .dropdown-menu {
    background-color: black;
    min-width: 200px;
    top: inherit;
    left: inherit;
    padding: 5px 0;
    margin: 0 0 0;
    border: 1px solid #ccc;

    li a{
      color: #bad3e5;
    }

    li div{
      display: block;
      padding: 3px 20px;
      clear: both;
      font-weight: 400;
      line-height: 1.42857143;
      color: #bad3e5;
      white-space: nowrap;
    }
    //li div:hover{
    //  background-color: ;
    //}

    li > a,div:focus, li > a,div:hover {
      background-color: #000d1b;
    }
  }

  button:active, button:focus {
    outline:none;
  }

  button:not(.search-button) {
    text-transform: uppercase;
    background: transparent;
    border: 1px solid #687882;
    padding: 5px 10px;
    border-radius: 5px;
    margin-right: 30px;
   
    color: #bad3e5;
  }

  .buttons-list {
    margin-top: 5px;
    margin-left: 13px;
    text-align: center;
  }
}

.action-not-allow{
  cursor: not-allowed;
}

.navbar-default {
  background-color: transparent;
  border: none;

  .container-fluid {
    padding-left: 0;
    padding-right: 0;
  }

  .header {
    font-size: 14px;
    border-bottom: 1px solid #232f38;
    padding-bottom: 7px;
  }

  .float {
    float: left;
  }

  .user-info {

    padding-top: 20px;
    color: #98a5ae;
    float: left;
    margin-left: 15px;
    font-size: 18px;



    div:not(:first-child) {
      margin-bottom: 4px;
      font-weight: bold;
    }

    .header-line {
      float: left;
      margin-right: 5px;
    }
    .line-img {
      margin: 9px 10px 0 10px;
      height: 61px;
    }
  }

  .date-info {
    position: absolute;
    right: 7px;
    font-size: 18px;
    padding-top: 20px;
    color: #98a5ae;
    float: left;
    width: 150px;

    .date {
      float: left;
      margin-right: 5px;
    }

    .line-img {
    
    }

    div {
      margin-bottom: 4px;
      font-weight: bold;
      text-align:right;
    }
  }

  .header-title {
    padding-top: 15px;
    font-weight: normal;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 540px;

    .header-unclassified {
      text-align: center;
      font-size: 18px;
      color: #9af92e;
      margin-bottom: 10px;
    }

    .header-isr {
      font-size: 25px;
      color: #cee3f5;
    }
  }
}

.buttons {
  border-bottom: 1px solid #232f38;

  .horiz-line {
    margin-top: -0.6%;
  }

  .buttons-list {

    .langs-dropdown {
      position: relative;
      width: 100px;
      margin-left: 15px;
      display: inline-block;
    }

    .dropdown-menu {
      background-color: transparent;
      min-width: 107px;

      li a{
        color: #bad3e5;
      }

      li > a:focus, li > a:hover {
        background-color: #000d1b;
      }
    }

    .under-button-line {
      margin-right: 15px;
      margin-top: -9px;
    }

    button:not(.search-button) {
      text-transform: uppercase;
      background: transparent;
      border: 1px solid #687882;
      padding: 5px 10px;
      border-radius: 5px;
      margin-right: 30px;
      min-width: 100px;
      color: #bad3e5;
    }

    .active-menu-item button {
      color: #ed7d31;
      border-color: #ed7d31;
      outline:none;
    }

    .search-button {
      text-transform: uppercase;
      padding: 4px 10px 3px 7px;
      margin-right: 10px;
      color: #001c2e;
      width: 82px;
      height: 28px;
      background: url(/assets/img/menu/button.png) no-repeat;
      background-size: 100% 90%;
      float: left;
      margin-top: -3px;
      cursor: pointer;
    }

    .search {
      display: inline-block;
      margin-bottom: 31px;
    }

   

    .search-input {
      border: 1px solid #9b9b9b;
      background: transparent;
      color: #9b9b9b;
      font-weight: bold;
      padding-left: 5px;
      width: 140px;
      height: 25px;
      margin-top: -3px;
      display: inline-block;

      input:-webkit-autofill,
      input:-webkit-autofill:hover,
      input:-webkit-autofill:focus,
      input:-webkit-autofill:active {
        transition: background-color 5000s ease-in-out 0s;
      }

      .search-input:focus {
        outline: none !important;
        border:1px solid #9b9b9b;
        box-shadow: 0 0 10px #719ECE;
      }
    }

    .search-input::-webkit-input-placeholder {
      padding-left: 5px;
      color: #9b9b9b;
      font-weight: bold;
    }
  }
}







// Loader CSS Start


/* Absolute Center Spinner */
.loading {
  position: fixed;
  z-index: 999;
  height: 2em;
  width: 2em;
  overflow: show;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

/* Transparent Overlay */
.loading:before {
  content: '';
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(162, 140, 140, 0.3);
}

/* :not(:required) hides these rules from IE9 and below */
.loading:not(:required) {
  /* hide "loading..." text */
  font: 0/0 a;
  color: transparent;
  text-shadow: none;
  background-color: transparent;
  border: 0;
}
/* ... */

